fixed clippy

--- a/assets/css/stlye.css
+++ b/assets/css/stlye.css
@@ -38,7 +38,7 @@ h2{
     position: absolute;
     width: 60%;
     height: 30vh;
-    left: 27.5%;
+    left: 28%;
 }
 a{
     position: absolute;
